# ws_autonomous_car

./: LICENSE  README.md
Piezas/: P88038.ipt  P88039.ipt  P88040.ipt  P88041_Wheel_Hex_Pin_C.ipt  P88042_Wheel_Hex_Pin_B.ipt  P88043_Front-Rear_Lower_Suspension_Pin_A.ipt  P88044_Nylor_Nut_M4.ipt  PX9200-01_Wheel_Hex.ipt  PX9200-05.ipt  PX9200-10.ipt  PX9200-11.ipt  PX9200-13.ipt  PX9200-16.ipt  PX9200-19.ipt  PX9200-22.ipt  PX9200-23A_LIPO_Battery.ipt  PX9200-24.ipt  PX9200-25.ipt  PX9200-28.ipt  PX9200-29A_Vacuum_Wheel_Complete.iam  PX9200-29A_Wheel.ipt  PX9200-29B_Tire.ipt  Readme  Wheel.ipt  tire.ipt
Piezas/OldVersions/: P88042_Wheel_Hex_Pin_B.0001.ipt  Wheel.0003.ipt  tire.0002.ipt
Piezas/PX9200-18_Front-Rear_Shock_Absorber/: PX9200-18_Front-Rear_Shock_Absorber.iam  Shock Spring Adjustment Nut.ipt  Suspension Spring.ipt
Piezas/PX9200-18_Front-Rear_Shock_Absorber/OldVersions/: PX9200-18_Front-Rear_Shock_Absorber.0016.iam
car_model/: carro_base.blend  carro_base.blend1  carro_base.dae  carro_llanta.blend  carro_llanta.blend1  carro_llanta.dae
car_sensors/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
car_sensors/src/car_controller/: CMakeLists.txt  package.xml
car_sensors/src/car_controller/launch/: car_sensors_nodes.launch  gazebo_world.launch  robot_description.launch  world.launch
car_sensors/src/car_controller/src/: car_server.cpp
car_sensors/src/car_controller/srv/: Changerate.srv
car_sensors/src/car_controller/urdf/: car.gazebo  car.xacro
car_sensors/src/car_controller/worlds/: empty_bot.world
(+41 files in other folders)
